--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+
+  <!-- !!!!!!!!!!!!  BODY !!!!!!!!!!!!!!!! -->
+
+  <body class="conteiner">
+    <!-- !!!!!!!!!!  HEADER !!!!!!!!!!!!!!! -->
+
     <header>
       <nav>
         <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
@@ -39,6 +44,9 @@
         </ul>
       </address>
     </header>
+
+    <!-- !!!!!!!!!!!!  MAIN !!!!!!!!!!!!!!! -->
+
     <main>
       <section class="main-effective">
         <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
@@ -150,6 +158,9 @@
         </ul>
       </section>
     </main>
+
+    <!-- !!!!!!!!!!!!  FOOTER !!!!!!!!!!!!!!! -->
+
     <footer class="end">
       <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
       <p class="end-text">
