--- a/index.html
+++ b/index.html
@@ -19,154 +19,178 @@
 
   <!-- !!!!!!!!!!!!  BODY !!!!!!!!!!!!!!!! -->
 
-  <body class="conteiner">
+  <body>
     <!-- !!!!!!!!!!  HEADER !!!!!!!!!!!!!!! -->
 
     <header>
-      <nav>
-        <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
-        <ul class="menu">
-          <li class="menu-list"><a class="menu-list-link" href="./index.html">Studio</a></li>
-          <li class="menu-list"><a class="menu-list-link" href="">Portfolio</a></li>
-          <li class="menu-list"><a class="menu-list-link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="address-menu">
-          <li class="address-menu-list">
-            <a class="address-menu-list-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="address-menu-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="conteiner heder">
+        <div>
+          <nav class="heder-nav">
+            <div class="heder-nav-div">
+              <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
+            </div>
+            <div class="heder-nav-div">
+              <ul class="menu">
+                <li class="menu-list"><a class="menu-list-link" href="./index.html">Studio</a></li>
+                <li class="menu-list"><a class="menu-list-link" href="">Portfolio</a></li>
+                <li class="menu-list"><a class="menu-list-link" href="">Contacts</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+
+        <div>
+          <address class="address">
+            <ul class="address-menu">
+              <li class="address-menu-list">
+                <a class="address-menu-list-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li class="address-menu-list">
+              <li>
+                <a class="address-menu-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
 
     <!-- !!!!!!!!!!!!  MAIN !!!!!!!!!!!!!!! -->
 
     <main>
       <section class="main-effective">
-        <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
-        <button class="button-stile" type="button">
-          <span class="button-text">Order Service</span>
-        </button>
+        <div class="conteiner">
+          <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
+          <button class="button-stile" type="button">
+            <span class="button-text">Order Service</span>
+          </button>
+        </div>
       </section>
-      <section>
-        <h2>Our benefits</h2>
-        <ul>
-          <li>
-            <h3 class="section-two-name">Strategy</h3>
-            <p class="section-two-text">
-              Our goal is to identify the business problem to walk away with the perfect and
-              creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-name">Punctuality</h3>
-            <p class="section-two-text">
-              Bring the key message to the brand's audience for the best price within the shortest
-              possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-name">Diligence</h3>
-            <p class="section-two-text">
-              Research and confirm brands that present the strongest digital growth opportunities
-              and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="section-two-name">Technologies</h3>
-            <p class="section-two-text">
-              Design practice focused on digital experiences. We bring forth a deep passion for
-              problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="teambackground">
-        <h2 class="team-our-name">Our Team</h2>
-        <ul>
-          <li class="team-color-back">
-            <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-name-text">Product Designer</p>
-          </li>
-          <li class="team-color-back">
-            <img src="./images/img1.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-name-text">Frontend Developer</p>
-          </li>
-          <li class="team-color-back">
-            <img src="./images/img2.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-name-text">Marketing</p>
-          </li>
-          <li class="team-color-back">
-            <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-name-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2 class="portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-name-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/CashlessPayment.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300" />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-name-text">App</p>
-          </li>
-          <li>
-            <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/ScreenIllustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-name-text">Design</p>
-          </li>
-          <li>
-            <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300" />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-name-text">Marketing</p>
-          </li>
-        </ul>
-      </section>
+
+      <div class="conteiner">
+        <section>
+          <h2>Our benefits</h2>
+          <ul>
+            <li>
+              <h3 class="section-two-name">Strategy</h3>
+              <p class="section-two-text">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-name">Punctuality</h3>
+              <p class="section-two-text">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-name">Diligence</h3>
+              <p class="section-two-text">
+                Research and confirm brands that present the strongest digital growth opportunities
+                and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="section-two-name">Technologies</h3>
+              <p class="section-two-text">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+      </div>
+
+      <div class="conteiner">
+        <section class="teambackground">
+          <h2 class="team-our-name">Our Team</h2>
+          <ul>
+            <li class="team-color-back">
+              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260" />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-name-text">Product Designer</p>
+            </li>
+            <li class="team-color-back">
+              <img src="./images/img1.jpg" alt="Tom Ford" width="264" height="260" />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-name-text">Frontend Developer</p>
+            </li>
+            <li class="team-color-back">
+              <img src="./images/img2.jpg" alt="Camila Garcia" width="264" height="260" />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-name-text">Marketing</p>
+            </li>
+            <li class="team-color-back">
+              <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" height="260" />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-name-text">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
+
+      <div class="conteiner">
+        <section>
+          <h2 class="portfolio">Our Portfolio</h2>
+          <ul>
+            <li>
+              <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-name-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/CashlessPayment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-name-text">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300" />
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-name-text">App</p>
+            </li>
+            <li>
+              <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
+              <h3 class="portfolio-name">Taxi Service</h3>
+              <p class="portfolio-name-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/ScreenIllustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Screen Illustrations</h3>
+              <p class="portfolio-name-text">Design</p>
+            </li>
+            <li>
+              <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300" />
+              <h3 class="portfolio-name">Online Courses</h3>
+              <p class="portfolio-name-text">Marketing</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <!-- !!!!!!!!!!!!  FOOTER !!!!!!!!!!!!!!! -->
 
     <footer class="end">
-      <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
-      <p class="end-text">
-        Increase the flow of customers and sales for your business with digital marketing & growth
-        solutions.
-      </p>
+      <div class="conteiner">
+        <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
+        <p class="end-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth
+          solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
