--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <a class="address-menu-list-link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
-              </li class="address-menu-list">
-              <li>
+              </li>
+              <li class="address-menu-list">
                 <a class="address-menu-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
               </li>
             </ul>
@@ -60,84 +60,112 @@
 
     <main>
       <section class="main-effective">
-        <div class="conteiner">
-        
-          <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
-        
-          <button class="button-stile" type="button">
-            <span class="button-text">Order Service</span>
-          </button>
+        <div class="conteiner title">
+          <div class="main-effective-title">
+            <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
+          </div>
+          <div class="button-stile-div">
+            <button class="button-stile" type="button">
+              <span class="button-text">Order Service</span>
+            </button>
+          </div>
         </div>
       </section>
 
-      <div class="conteiner">
-        <section>
-          <h2>Our benefits</h2>
-          <ul>
-            <li>
-              <h3 class="section-two-name">Strategy</h3>
-              <p class="section-two-text">
-                Our goal is to identify the business problem to walk away with the perfect and
-                creative solution.
-              </p>
-            </li>
-            <li>
-              <h3 class="section-two-name">Punctuality</h3>
-              <p class="section-two-text">
-                Bring the key message to the brand's audience for the best price within the shortest
-                possible time.
-              </p>
-            </li>
-            <li>
-              <h3 class="section-two-name">Diligence</h3>
-              <p class="section-two-text">
-                Research and confirm brands that present the strongest digital growth opportunities
-                and minimize risk.
-              </p>
-            </li>
-            <li>
-              <h3 class="section-two-name">Technologies</h3>
-              <p class="section-two-text">
-                Design practice focused on digital experiences. We bring forth a deep passion for
-                problem-solving.
-              </p>
-            </li>
-          </ul>
-        </section>
-      </div>
+      <section>
+        <div class="conteiner benefits">
+          <h2 class="hide">Our benefits</h2>
+          <div>
+            <ul class="our-benefits-conteiner">
+              <li class="our-benefits-conteiner-li">
+                <h3 class="section-two-name">Strategy</h3>
+                <p class="section-two-text">
+                  Our goal is to identify the business problem to walk away with the perfect and
+                  creative solution.
+                </p>
+              </li>
+              <li class="our-benefits-conteiner-li">
+                <h3 class="section-two-name">Punctuality</h3>
+                <p class="section-two-text">
+                  Bring the key message to the brand's audience for the best price within the
+                  shortest possible time.
+                </p>
+              </li>
+              <li class="our-benefits-conteiner-li">
+                <h3 class="section-two-name">Diligence</h3>
+                <p class="section-two-text">
+                  Research and confirm brands with the strongest digital growth opportunities and
+                  minimize risk.
+                </p>
+              </li>
+              <li class="our-benefits-conteiner-li">
+                <h3 class="section-two-name">Technologies</h3>
+                <p class="section-two-text">
+                  Design practice focused on digital experiences. We bring forth a deep passion for
+                  problem-solving.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
-      <div class="conteiner">
-        <section class="teambackground">
+      <section class="teambackground">
+        <div class="conteiner">
           <h2 class="team-our-name">Our Team</h2>
-          <ul>
+          <ul class="team-our-list">
             <li class="team-color-back">
-              <img src="./images/img.jpg" alt="Mark Guerrero" width="264" height="260" />
+              <img
+                class="team-our-img"
+                src="./images/img.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-name-text">Product Designer</p>
             </li>
             <li class="team-color-back">
-              <img src="./images/img1.jpg" alt="Tom Ford" width="264" height="260" />
+              <img
+                class="team-our-img"
+                src="./images/img1.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-name-text">Frontend Developer</p>
             </li>
             <li class="team-color-back">
-              <img src="./images/img2.jpg" alt="Camila Garcia" width="264" height="260" />
+              <img
+                class="team-our-img"
+                src="./images/img2.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-name-text">Marketing</p>
             </li>
             <li class="team-color-back">
-              <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" height="260" />
+              <img
+                class="team-our-img"
+                src="./images/img3.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-name-text">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
-      <div class="conteiner">
-        <section>
+      <section>
+        <div class="conteiner">
           <h2 class="portfolio">Our Portfolio</h2>
-          <ul>
+          <ul class="portfolio-list">
             <li>
               <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
               <h3 class="portfolio-name">Banking App</h3>
@@ -179,15 +207,17 @@
               <p class="portfolio-name-text">Marketing</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!-- !!!!!!!!!!!!  FOOTER !!!!!!!!!!!!!!! -->
 
     <footer class="end">
       <div class="conteiner">
-        <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
+        <div class="end-logo-div">
+          <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
+        </div>
         <p class="end-text">
           Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
