--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
       <section>
         <div class="conteiner">
-          <h2 class="portfolio">Our Portfolio</h2>
+          <h2 class="portfolio">Ouur Portfolio</h2>
           <ul class="portfolio-list">
             <li>
               <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
