--- a/index.html
+++ b/index.html
@@ -22,37 +22,29 @@
   <body>
     <!-- !!!!!!!!!!  HEADER !!!!!!!!!!!!!!! -->
 
-    <header>
-      <div class="conteiner heder">
-        <div>
-          <nav class="heder-nav">
-            <div class="heder-nav-div">
-              <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
-            </div>
-            <div class="heder-nav-div">
-              <ul class="menu">
-                <li class="menu-list"><a class="menu-list-link" href="./index.html">Studio</a></li>
-                <li class="menu-list"><a class="menu-list-link" href="">Portfolio</a></li>
-                <li class="menu-list"><a class="menu-list-link" href="">Contacts</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
+    <header class="page-hader">
+      <div class="conteiner heder-menu">
+        <nav class="heder-nav">
+          <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
+          <ul class="menu">
+            <li class="menu-list"><a class="menu-list-link" href="./index.html">Studio</a></li>
+            <li class="menu-list"><a class="menu-list-link" href="">Portfolio</a></li>
+            <li class="menu-list"><a class="menu-list-link" href="">Contacts</a></li>
+          </ul>
+        </nav>
 
-        <div>
-          <address class="address">
-            <ul class="address-menu">
-              <li class="address-menu-list">
-                <a class="address-menu-list-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="address-menu-list">
-                <a class="address-menu-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-              </li>
-            </ul>
-          </address>
-        </div>
+        <address class="address">
+          <ul class="address-menu">
+            <li class="address-menu-list">
+              <a class="address-menu-list-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="address-menu-list">
+              <a class="address-menu-list-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
 
