--- a/index.html
+++ b/index.html
@@ -60,41 +60,39 @@
         </div>
       </section>
 
-      <section>
+      <section class="main-benefits">
         <div class="conteiner benefits">
           <h2 class="hide">Our benefits</h2>
-          <div>
-            <ul class="our-benefits-conteiner">
-              <li class="our-benefits-conteiner-li">
-                <h3 class="section-two-name">Strategy</h3>
-                <p class="section-two-text">
-                  Our goal is to identify the business problem to walk away with the perfect and
-                  creative solution.
-                </p>
-              </li>
-              <li class="our-benefits-conteiner-li">
-                <h3 class="section-two-name">Punctuality</h3>
-                <p class="section-two-text">
-                  Bring the key message to the brand's audience for the best price within the
-                  shortest possible time.
-                </p>
-              </li>
-              <li class="our-benefits-conteiner-li">
-                <h3 class="section-two-name">Diligence</h3>
-                <p class="section-two-text">
-                  Research and confirm brands with the strongest digital growth opportunities and
-                  minimize risk.
-                </p>
-              </li>
-              <li class="our-benefits-conteiner-li">
-                <h3 class="section-two-name">Technologies</h3>
-                <p class="section-two-text">
-                  Design practice focused on digital experiences. We bring forth a deep passion for
-                  problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <ul class="our-benefits-conteiner">
+            <li class="our-benefits-conteiner-li">
+              <h3 class="section-two-name">Strategy</h3>
+              <p class="section-two-text">
+                Our goal is to identify the business problem to walk away with the perfect and
+                creative solution.
+              </p>
+            </li>
+            <li class="our-benefits-conteiner-li">
+              <h3 class="section-two-name">Punctuality</h3>
+              <p class="section-two-text">
+                Bring the key message to the brand's audience for the best price within the shortest
+                possible time.
+              </p>
+            </li>
+            <li class="our-benefits-conteiner-li">
+              <h3 class="section-two-name">Diligence</h3>
+              <p class="section-two-text">
+                Research and confirm brands with the strongest digital growth opportunities and
+                minimize risk.
+              </p>
+            </li>
+            <li class="our-benefits-conteiner-li">
+              <h3 class="section-two-name">Technologies</h3>
+              <p class="section-two-text">
+                Design practice focused on digital experiences. We bring forth a deep passion for
+                problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -150,14 +148,16 @@
         </div>
       </section>
 
-      <section>
+      <section class="section-portfolio">
         <div class="conteiner">
-          <h2 class="portfolio">Ouur Portfolio</h2>
+          <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li>
               <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
-              <h3 class="portfolio-name">Banking App</h3>
-              <p class="portfolio-name-text">App</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Banking App</h3>
+                <p class="portfolio-name-text">App</p>
+              </div>
             </li>
             <li>
               <img
@@ -166,18 +166,24 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Cashless Payment</h3>
-              <p class="portfolio-name-text">Marketing</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Cashless Payment</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300" />
-              <h3 class="portfolio-name">Meditation App</h3>
-              <p class="portfolio-name-text">App</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Meditation App</h3>
+                <p class="portfolio-name-text">App</p>
+              </div>
             </li>
             <li>
               <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
-              <h3 class="portfolio-name">Taxi Service</h3>
-              <p class="portfolio-name-text">Marketing</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Taxi Service</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
             </li>
             <li>
               <img
@@ -186,13 +192,17 @@
                 width="360"
                 height="300"
               />
-              <h3 class="portfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-name-text">Design</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Screen Illustrations</h3>
+                <p class="portfolio-name-text">Design</p>
+              </div>
             </li>
             <li>
               <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300" />
-              <h3 class="portfolio-name">Online Courses</h3>
-              <p class="portfolio-name-text">Marketing</p>
+              <div class="portfilio-border">
+                <h3 class="portfolio-name">Online Courses</h3>
+                <p class="portfolio-name-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
