--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <body>
     <!-- !!!!!!!!!!  HEADER !!!!!!!!!!!!!!! -->
 
-    <header class="page-hader">
-      <div class="conteiner heder-menu">
+    <header>
+      <div class="container heder-menu">
         <nav class="heder-nav">
           <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
           <ul class="menu">
@@ -52,7 +52,7 @@
 
     <main>
       <section class="main-effective">
-        <div class="conteiner title">
+        <div class="container title">
           <h1 class="main-effective-name">Effective Solutions for Your Business</h1>
           <button class="button-stile" type="button">
             <span class="button-text">Order Service</span>
@@ -61,7 +61,7 @@
       </section>
 
       <section class="main-benefits">
-        <div class="conteiner benefits">
+        <div class="container benefits">
           <h2 class="hide">Our benefits</h2>
           <ul class="our-benefits-conteiner">
             <li class="our-benefits-conteiner-li">
@@ -97,7 +97,7 @@
       </section>
 
       <section class="teambackground">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="team-our-name">Our Team</h2>
           <ul class="team-our-list">
             <li class="team-color-back">
@@ -149,7 +149,7 @@
       </section>
 
       <section class="section-portfolio">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li>
@@ -212,7 +212,7 @@
     <!-- !!!!!!!!!!!!  FOOTER !!!!!!!!!!!!!!! -->
 
     <footer class="end">
-      <div class="conteiner">
+      <div class="container">
         <div class="end-logo-div">
           <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
         </div>
