--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- !!!!!!!!!!  HEADER !!!!!!!!!!!!!!! -->
 
-    <header>
+    <header class="page-header">
       <div class="container heder-menu">
         <nav class="heder-nav">
           <a class="logo" href="./index.html">Web<span class="text-style">Studio</span></a>
