--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
       <section class="main-benefits">
         <div class="container benefits">
-          <h2 class="hide">Our benefits</h2>
+          <h2 class="visually-hidden">Our benefits</h2>
           <ul class="our-benefits-conteiner">
             <li class="our-benefits-conteiner-li">
               <h3 class="section-two-name">Strategy</h3>
