--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="container">
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li>
+            <li class="portfolio-list-li">
               <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300" />
               <div class="portfilio-border">
                 <h3 class="portfolio-name">Banking App</h3>
@@ -213,9 +213,7 @@
 
     <footer class="end">
       <div class="container">
-        <div class="end-logo-div">
-          <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
-        </div>
+        <a class="end-logo" href="./index.html">Web<span class="end-logo-part">Studio</span></a>
         <p class="end-text">
           Increase the flow of customers and sales for your business with digital marketing & growth
           solutions.
