--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <p class="portfolio-name-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <img
                 src="./images/CashlessPayment.jpg"
                 alt="Cashless Payment"
@@ -171,21 +171,21 @@
                 <p class="portfolio-name-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300" />
               <div class="portfilio-border">
                 <h3 class="portfolio-name">Meditation App</h3>
                 <p class="portfolio-name-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300" />
               <div class="portfilio-border">
                 <h3 class="portfolio-name">Taxi Service</h3>
                 <p class="portfolio-name-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <img
                 src="./images/ScreenIllustrations.jpg"
                 alt="Screen Illustrations"
@@ -197,7 +197,7 @@
                 <p class="portfolio-name-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="portfolio-list-li">
               <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300" />
               <div class="portfilio-border">
                 <h3 class="portfolio-name">Online Courses</h3>
