--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-name-text">Product Designer</p>
+              <div class="team-color-back-div">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-name-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-color-back">
               <img
@@ -119,8 +121,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-name-text">Frontend Developer</p>
+              <div class="team-color-back-div">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-name-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-color-back">
               <img
@@ -130,8 +134,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-name-text">Marketing</p>
+              <div class="team-color-back-div">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-name-text">Marketing</p>
+              </div>
             </li>
             <li class="team-color-back">
               <img
@@ -141,8 +147,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-name-text">UI Designer</p>
+              <div class="team-color-back-div">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-name-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
